ui/fix: limit autocomplete dropdown height and scroll when overflowing

--- a/app/assets/stylesheets/modules/filters.css.scss
+++ b/app/assets/stylesheets/modules/filters.css.scss
@@ -48,3 +48,9 @@
   pointer-events: none;
   opacity: 0.4;
 }
+
+// autocomplete dropdown
+.ui-menu {
+  max-height: 20vh;
+  overflow: auto;
+}
